--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,152 +1,49 @@
 <head>
-<<<<<<< HEAD
-	<meta charset="utf-8">
-	<title>{{config['title']}}</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
-	<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <title>{{ config['title'] }}</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-	<script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script>
-	<script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"
+            integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-=======
-<meta charset="utf-8">
-        <title>{{config['title']}}</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script>
+    <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
-        <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
-
-        <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script>
-        <script src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
-
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
->>>>>>> flask-He
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<<<<<<< HEAD
-	<link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-	<link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
-	<style type="text/css">
-		.container-fluid{
-			margin-left:1em;
-			margin-right:1em;
-		}
-	</style>
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.1/css/select.dataTables.min.css">
-	    <style type="text/css">
-        .container-fluid {
-            margin-left: 1em;
-            margin-right: 1em;
-        }
-    </style>
-    <script>
-        window.onload = init;
-
-        function init() {
-            var button = document.querySelectorAll("button");
-            var i;
-            for (i = 0; i < button.length; i++) {
-                button[i].addEventListener("click", handleButtonClick);
-                //button[i].onclick = handleButtonClick(family_number);
-            }
-        }
-
-        function handleButtonClick(family_number) {
-            var data = {}
-            data['family_id'] = event.target.innerHTML;
-
-            $.ajax(
-                {
-                    type: "POST",
-                    //url: "/swissport",
-                    url: "/characteristic",
-                    data: JSON.stringify(data),
-                    dataType: "html",
-                    success: function (data) {
-                        $(document.body).html(data);
-                    },
-                    error: function (xhr, status, error) {
-                        console.log(error);
-                    }
-                });
-        }
-    </script>
-</head>
-=======
-        <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-        <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
-        <style type="text/css">
-                .container-fluid{
-                        margin-left:1em;
-                        margin-right:1em;
-                }
-        </style>
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.1/css/select.dataTables.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
+    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
     <style type="text/css">
         .container-fluid {
             margin-left: 1em;
             margin-right: 1em;
         }
     </style>
-    <script>
-        window.onload = init;
-
-        function init() {
-            var button = document.querySelectorAll("button");
-            var i;
-            for (i = 0; i < button.length; i++) {
-                button[i].addEventListener("click", handleButtonClick);
-                //button[i].onclick = handleButtonClick(family_number);
-            }
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/buttons/1.6.2/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.1/css/select.dataTables.min.css">
+    <style type="text/css">
+        .container-fluid {
+            margin-left: 1em;
+            margin-right: 1em;
         }
+    </style>
 
-        function handleButtonClick(family_number) {
-            var data = {}
-            data['family_id'] = event.target.innerHTML;
-
-            $.ajax(
-                {
-                    type: "POST",
-                    //url: "/swissport",
-                    url: "/characteristic",
-                    data: JSON.stringify(data),
-                    dataType: "html",
-                    success: function (data) {
-                        $(document.body).html(data);
-                    },
-                    error: function (xhr, status, error) {
-                        console.log(error);
-                    }
-                });
-        }
-    </script>
 </head>
->>>>>>> flask-He
