--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                     <li class="list-group-item"><a href="/characteristic/all">Characterize</a></li>
                     <li class="list-group-item"><a href="/swissport/all">Swissprot</a></li>
                     <li class="list-group-item"><a href="/trembl/all">TrEMBL</a></li>
-                    <li class="list-group-item"><a href="/tree/all">Tree Of Life</a></li>
+                    <li class="list-group-item"><a href="/tree/all">Tree of Life</a></li>
                 </ul>
             </div>
             <div class="reserved_list">
