--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,15 +1,16 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
 
         <!-- BRAND -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#alignment-example" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">Toggle navigatsion</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg" class = "navbar-brand" href="https://www.unl.edu">
             <a class="navbar-brand" href="/">{{ config['title'] }}</a>
         </div>
 
