--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
 {% include '_css.html' %}
 <body>
 {% include '_header.html' %}
-<div class="container-fluid">
-    {% block content %}{% endblock %}
+<div class="container-fluid" id="material-content">
+    {% block content %}
+    {% endblock %}
 </div>
 {% include '_footer.html' %}
 </body>
