--- a/templates/network.html
+++ b/templates/network.html
@@ -1,45 +1,22 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+{% include '_head.html' %}
+{% include '_css.html' %}
 
-{% block title %}Home{% endblock %}
-
-{% block content %}
+<body>
+<div class="container-fluid" id="material-content">
     <div class="row">
         <div class="page-header">
-            <h3>This is network page<small>Subtext for header</small></h3>
+            <h3>{{name}}</h3>
 
         </div>
-    </div>
-    <div class="familyList">
-        <h1>
-            Family List
-        </h1>
-        <ul class="breadcrumb" style="font-size: medium">
-            {% for i in range(40) %}
-                <li><a href="{{ url_for('network', family_id = i + 1) }}">{{ i + 1 }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-
-        </ul>
-    </div>
-    <div id="introduction">
-        <p style="font-size: x-large">Tree diagrams originated in the medieval era to represent genealogical
-            relationships.
-
-            Phylogenetic tree diagrams in the evolutionary sense date back to at least the early 19th century.
-
-            The term phylogeny for the evolutionary relationships of species through time was coined by Ernst Haeckel,
-            who went further than Darwin in proposing phylogenic histories of life. In contemporary usage, tree of life
-            refers to the compilation of comprehensive phylogenetic databases rooted at the last universal common
-            ancestor of life on Earth. The Open Tree of Life, first published September 2015, is a project to compile
-            such a database for free publ{c access.</p>
     </div>
     <form id="searchForm" style="margin-top: 40px; font-size: medium">
         <input type="text" name="s" placeholder="Search by Uniprot"/>
         <input type="submit" value="Search Node"/>
     </form>
     <div id="cy" style="width: 80%;
-        height: 700px;"></div>
+        height: 700px;border-radius: 25px;border: 1px solid #ccc!important;padding: 20px;"></div>
 
     <script>
         var networkData = JSON.parse({{networkData|tojson|safe}});
@@ -115,7 +92,7 @@
         }
 
     </script>
-{% endblock %}
-
-
-
+</div>
+{% include '_footer.html' %}
+</body>
+</html> 
