--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -8,6 +8,7 @@
 
         </div>
     </div>
+    <button type="button" class="btn btn-primary btn-lg btn-block" data-fancybox data-type="iframe" data-src="{{network_id}}" href="javascript:;"  >Open Network</button>
     <div class="abstractOfPage">
         <div class="informationOfGene">
             <p>1 C-ring cleavage quercetin Bacillus subtilis (strain 168) a tryptophan auxotroph isolated after X-rays
