--- a/templates/_css.html
+++ b/templates/_css.html
@@ -8,6 +8,7 @@
    text-align: center;
    vertical-align: middle;
 }
+    :target{ padding-top:75px; }
 </style>
 <style type='text/css'>
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Sans+Pro&display=swap');
