--- a/templates/_css.html
+++ b/templates/_css.html
@@ -11,7 +11,7 @@
     :target{ padding-top:75px; }
 </style>
 <style type='text/css'>
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Sans+Pro&display=swap');
+@import url('/static/font/font.css');
         :root {
             --side-bar-bg-color: #fff;
             --control-text-color: #777;
