--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -10,7 +10,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg" class = "navbar-brand" href="https://www.unl.edu">
+            <a href="https://www.unl.edu">
+            <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg" class = "navbar-brand" ></a>
             <a class="navbar-brand" href="/">{{ config['title'] }}</a>
         </div>
 
